==> microchip-pic-avr-examples/dspic33-dsc-bootloader-code-examples/dspic33a_secure_boot_and_secure_firmware_upgrade_demo/boot.X/bsp/led1.c <==
/*
? [2024] Microchip Technology Inc. and its subsidiaries.

    Subject to your compliance with these terms, you may use Microchip 
    software and any derivatives exclusively with Microchip products. 
    You are responsible for complying with 3rd party license terms  
    applicable to your use of 3rd party software (including open source  
    software) that may accompany Microchip software. SOFTWARE IS ?AS IS.? 
    NO WARRANTIES, WHETHER EXPRESS, IMPLIED OR STATUTORY, APPLY TO THIS 
    SOFTWARE, INCLUDING ANY IMPLIED WARRANTIES OF NON-INFRINGEMENT,  
    MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE. IN NO EVENT 
    WILL MICROCHIP BE LIABLE FOR ANY INDIRECT, SPECIAL, PUNITIVE, 
    INCIDENTAL OR CONSEQUENTIAL LOSS, DAMAGE, COST OR EXPENSE OF ANY 
    KIND WHATSOEVER RELATED TO THE SOFTWARE, HOWEVER CAUSED, EVEN IF 
    MICROCHIP HAS BEEN ADVISED OF THE POSSIBILITY OR THE DAMAGES ARE 
    FORESEEABLE. TO THE FULLEST EXTENT ALLOWED BY LAW, MICROCHIP?S 
    TOTAL LIABILITY ON ALL CLAIMS RELATED TO THE SOFTWARE WILL NOT 
    EXCEED AMOUNT OF FEES, IF ANY, YOU PAID DIRECTLY TO MICROCHIP FOR 
    THIS SOFTWARE.
*/

#include <xc.h>
#include "led1.h"

void LED1_Initialize(void)
{
    TRISCbits.TRISC9 = 0;
}

void LED1_On(void)
{
    LATCbits.LATC9 = 1;
}

void LED1_Off(void)
{
    LATCbits.LATC9 = 0;
}

void LED1_Toggle(void)
{
    LATCbits.LATC9 ^= 1;
}

void LED1_Set(bool on)
{
    LATCbits.LATC9 = on;
}

const struct LED_SIMPLE led1 = 
{
    &LED1_Initialize,
    &LED1_On,
    &LED1_Off,
    &LED1_Toggle,
    &LED1_Set
};
